--- a/AmbChat/app/src/main/res/values/strings.xml
+++ b/AmbChat/app/src/main/res/values/strings.xml
@@ -5,7 +5,25 @@
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
     <string name="action_settings">Settings</string>
+    <string name="androidStudio">Android Studio</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="female">FeMale</string>
+    <string name="male">Male</string>
+    <string name="gender">Gender</string>
+    <string name="fullName">Full Name</string>
+    <string name="email">Email</string>
+    <string name="userName">User Name</string>
+    <string name="password">Password</string>
+    <string name="repeatPassword">Repeat Password</string>
+    <string name="register">Register</string>
+    <string name="rememberPassword">Remember Password</string>
+    <string name="logIn">Log In</string>
+    <string name="chuaCoACC">Nếu chưa có tài khoản nhấn vào đây</string>
+    <string name="searchMess">Search mess</string>
+    <string name="Search">Search</string>
+    <string name="nameFriendChat">Tên người chat"</string>
+    <string name="updateInfor">Update infor</string>
+    <string name="SearchFriend">Search friend</string>
 </resources>
