--- a/AmbChat/app/src/main/res/values/strings.xml
+++ b/AmbChat/app/src/main/res/values/strings.xml
@@ -34,4 +34,9 @@
     <string name="addfr">Thêm bạn</string>
     <string name="sendmess">Nhắn tin</string>
     <string name="tin_nhan_cuoi">Tin nhắn cuối</string>
+    <string name="title_activity_main">MainActivity</string>
+    <string name="nav_header_title">Android Studio</string>
+    <string name="nav_header_subtitle">android.studio@android.com</string>
+    <string name="nav_header_desc">Navigation header</string>
+    <string name="title_activity_main2">Main2Activity</string>
 </resources>
