--- a/AmbChat/app/src/main/res/values/strings.xml
+++ b/AmbChat/app/src/main/res/values/strings.xml
@@ -39,4 +39,6 @@
     <string name="nav_header_subtitle">android.studio@android.com</string>
     <string name="nav_header_desc">Navigation header</string>
     <string name="title_activity_main2">Main2Activity</string>
+    <string name="message_text">Message Text</string>
+    <string name="_00_00">00:00</string>
 </resources>
