--- a/AmbChat/app/src/main/res/values/strings.xml
+++ b/AmbChat/app/src/main/res/values/strings.xml
@@ -42,4 +42,5 @@
     <string name="message_text">Message Text</string>
     <string name="_00_00">00:00</string>
     <string name="click_dk">đây</string>
+    <string name="add_friend" />
 </resources>
